--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,13 @@ jobs:
       with:
         # Version Spec of the version to use.  Examples: 10.x, 10.15.1, >=10.15.0
         node-version: 12
-    - name: yarn actions (yaml)
-      uses: sergioramos/yarn-actions@v6
+
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
     - name: Install Dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile --non-interactive
 
     # Runs a set of commands using the runners shell
     - name: Tests
