--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^10.0.27",
+    "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^11.2.1",
     "@theme-ui/presets": "^0.3.0",
+    "axios": "^0.19.2",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "recoil": "^0.0.8",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "theme-ui": "^0.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,9 +42,14 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "fastify": "^2.14.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "nock": "^12.0.3",
+    "prettier": "2.0.5",
+    "redux-saga-test-plan": "^4.0.0-rc.3"
   },
   "prettier": {
     "singleQuote": true
-  }
+  },
+  "proxy": "http://localhost:3001"  
 }
