--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^11.2.1",
     "@theme-ui/presets": "^0.3.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-twitter-widgets": "^1.9.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "theme-ui": "^0.3.1"
@@ -51,5 +54,5 @@
   "prettier": {
     "singleQuote": true
   },
-  "proxy": "http://localhost:3001"  
+  "proxy": "http://localhost:3001"
 }
